test/schemas/fail/reserved.sat
// ERROR: schemas/fail/reserved.sat(2): Type declared with reserved name: $struct
struct $struct {
    // ERROR: schemas/fail/reserved.sat(4): Field declared with reserved name: $field
    int32 $field;
}

// ERROR: schemas/fail/reserved.sat(8): Type declared with reserved name: $enum
enum $enum {
    // ERROR: schemas/fail/reserved.sat(10): Enum item declared with reserved name: $item
    $item = 1
}
